# docker-manager

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-manager.bash  install.sh  uninstall.sh
.github/workflows/: ci.yml  pre-release.yml  release.yml  rust.yml
src/: constants.rs  dockercommand.rs  functions.rs  lib.rs  logger.rs  main.rs  parser.rs  structs.rs  subcommand.rs
src/cli/: app.rs  flags.rs  internal_command.rs  mod.rs
src/client/: connector.rs  mod.rs
src/formatter/: mod.rs  stdout.rs
src/utility/: command.rs  mod.rs  other.rs  run.rs
test_files/: mock_ssh_config  mock_ssh_config_regex
