[package]
name = "docker-manager"
version = "0.15.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = [ "derive" ] }
openssh = "0.9.0"
tokio = { "version" = "1.15", features = ["full"] }
regex = "1.5"
futures = "0.3"
log = "0.4"
anyhow = "1.0.53"

[profile.release]
lto = true