[package]
name = "docker-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
openssh = { version = "0.9", features = [ "native-mux" ]}
tokio = { version = "1.21", features = ["full"] }

futures = "0.3"
